--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           const apiKey = "22eccfafb6544c9a8b9b1fa539f64e54_03476e407bd74616a086eae85e9ea91d_andoraitools"; // Replace with your actual API key
 
           // Prepend the CORS proxy URL to your API URL
-          const url = 'https://thingproxy.freeboard.io/fetch/https://api.lightxeditor.com/external/api/v1/remove-background';
+          const url = 'https://corsproxy.io/?https://api.lightxeditor.com/external/api/v1/remove-background';
 
           const data = {
             imageUrl: imageUrl,
