--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
             return;
           }
 
-          const apiKey = "22eccfafb6544c9a8b9b1fa539f64e54_03476e407bd74616a086eae85e9ea91d_andoraitools"; // Replace with your actual API key
+          const apiKey =
+            "22eccfafb6544c9a8b9b1fa539f64e54_03476e407bd74616a086eae85e9ea91d_andoraitools"; // Replace with your actual API key
 
           // Prepend the CORS proxy URL to your API URL
-          const url = 'https://cors-anywhere.herokuapp.com/https://api.lightxeditor.com/external/api/v1/remove-background';
-
+          const url = 'https://api.lightxeditor.com/external/api/v1/remove-background';
 
           const data = {
             imageUrl: imageUrl,
