--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Background Removal API</title>
   </head>
+  <link rel="icon" href="data:image/x-icon,;">
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -23,7 +25,13 @@
       text-align: center;
     }
 
-    input {
+    input[type="file"] {
+      width: 80%;
+      padding: 10px;
+      margin: 10px 0;
+    }
+
+    input[type="text"] {
       width: 80%;
       padding: 10px;
       margin: 10px 0;
@@ -53,8 +61,8 @@
     <div class="container">
       <h1>Remove Image Background</h1>
 
-      <!-- Input for image URL -->
-      <input type="text" id="imageUrl" placeholder="Enter Image URL" />
+      <!-- Input for image file -->
+      <input type="file" id="imageFile" accept="image/*" />
 
       <!-- Input for background color or code -->
       <input
@@ -81,40 +89,36 @@
       document
         .getElementById("removeBgBtn")
         .addEventListener("click", function () {
-          const imageUrl = document.getElementById("imageUrl").value;
+          const imageFile = document.getElementById("imageFile").files[0];
           const bgColor = document.getElementById("bgColor").value || null;
 
-          if (!imageUrl) {
-            alert("Please provide a valid image URL.");
+          if (!imageFile) {
+            alert("Please provide a valid image file.");
             return;
           }
 
           const apiKey =
             "22eccfafb6544c9a8b9b1fa539f64e54_03476e407bd74616a086eae85e9ea91d_andoraitools"; // Replace with your actual API key
 
-          // Prepend the CORS proxy URL to your API URL
           const url = 'https://api.lightxeditor.com/external/api/v1/remove-background';
 
-          const data = {
-            imageUrl: imageUrl,
-            background: bgColor || "transparent",
-          };
+          // Create a FormData object
+          const formData = new FormData();
+          formData.append("image", imageFile);
+          formData.append("background", bgColor || "transparent");
 
           const options = {
             method: "POST",
             headers: {
-              "Content-Type": "application/json",
               "x-api-key": apiKey,
             },
-            body: JSON.stringify(data),
+            body: formData,
           };
 
           fetch(url, options)
             .then((response) => {
               if (!response.ok) {
-                throw new Error(
-                  `Request failed with status code ${response.status}`
-                );
+                throw new Error(`Request failed with status code ${response.status}`);
               }
               return response.json();
             })
@@ -131,6 +135,11 @@
               console.error("Error:", error);
             });
         });
+
+      // Function to check order status (not included here, add your implementation)
+      function checkOrderStatus(orderId) {
+        // Implement the logic to check the order status based on the orderId
+      }
     </script>
   </body>
 </html>
